# mirofish-nvva

./: .gitignore  docker-compose.yml  go.mod
ai-agent/: Dockerfile  main.py  main_v12_backup.py  pyproject.toml
ai-agent/core/: config.py
cmd/server/: main.go
configs/: config.yaml
data/: mirofish.db  mirofish.db-shm  mirofish.db-wal
deployments/: Dockerfile.gateway  nginx.conf
docs/: index.html
docs/assets/: index--cLIZ1bp.css  index-BGY9hpkK.css  index-BlPAQ0CA.js  index-Bmm7RKJ2.css  index-BurvrsZK.js  index-C7zpe7Yt.js  index-C_JeF9Z8.css  index-DUN2UvVN.js  index-DYYP-9uM.css  index-DZVKlBki.js  index-D_WnKyNi.js  index-Dt2a1v80.css  index-HLt83pJx.js  index-ac2L99bx.js  index-b6TIaHnN.js  index-tuG1mfEt.css
scripts/: init-db.sql  start.sh  stop.sh
static/: index.html
static/assets/: index-K77IFq6-.js
web/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/dist-gh/: index.html
web/dist-gh/assets/: index-BSr-FC1O.css  index-Cs-RA8hy.js
web/src/: App.vue
web/src/api/: demo.ts  index.ts
web/src/router/: index.ts
web/src/stores/: index.ts
web/src/views/: Agents.vue  Dashboard.vue  DataIngestion.vue  DataPipeline.vue  Report.vue  Simulation.vue  System.vue
