[tool.poetry]
name = "nuwa-ai-agent"
version = "1.0.0"
description = "女娲 LLM 智能体服务 - MiroFish 企业经营数字孪生系统"
authors = ["MiroFish Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
httpx = "^0.25.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
qdrant-client = "^1.7.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
